# MedCab

./: .gitignore  README.md  pyproject.toml  ruff.ci.toml
.data/example_schemas/: starting_dispensary_schema.json
.data/example_schemas/products/: ex_black_jack_flower_request.json
.data/example_schemas/products/simplified_for_testing/: ex_pb_crunch_request.json
.devcontainer/: conda-lock.yml  dev.environment.yml  devcontainer.env.example  devcontainer.json
config/: .secrets.example.toml  settings.toml
example_schemas/products/simplified_for_testing/: ex_donny_burger.json
project/: .env.example  docker-compose.yml  reload_nginx.sh
project/apps/api/: pyproject.toml  requirements.txt
project/apps/api.bak/app/: config.py  main.py
project/apps/api/app/: constants.py  dependencies.py  env_test.py  init_sqlite_db.py  main.py  populate_db.py  (+1 more)
project/apps/api_new/: .gitignore  Dockerfile  pyproject.toml
project/apps/medcab-backend/: .dockerignore  dev.environment.yml  pyproject.toml  requirements.txt
project/apps/medcab-backend/src/: config.py  start_server.py  wsgi.py
project/apps/medcab-backend/src/config/: settings.toml
project/apps/medcab-backend/src/config.bak/: .secrets.example.toml
project/apps/medcab-backend/src/diagrams/: api.drawio
project/apps/medcab-backend/src/example_schemas/products/: ex_donny_burger.json
project/apps/medcab-backend/src/medcab_backend/: __init__.py  constants.py  dependencies.py  main.py
project/apps/medcab-backend/src/medcab_backend/blueprints/product/: __init__.py  form_schemas.py  views.py
project/apps/medcab-backend/src/medcab_backend/domain/: __init__.py
project/apps/medcab-backend/src/medcab_backend/domain/product/: __init__.py  crud.py  form_schemas.py  models.py  schemas.py  validators.py
project/apps/medcab-backend/src/medcab_backend/domain/ui/: __init__.py  alerts.py
project/apps/medcab-backend/src/medcab_backend/domain/ui/menu/: __init__.py  base.py  schemas.py
project/apps/medcab-backend/src/medcab_backend/domain/ui/notification/: __init__.py  alerts.py  base.py  page.py  validators.py
project/apps/medcab-backend/src/medcab_backend/templates/: base.html
project/apps/medcab-backend/src/medcab_backend/templates/components/card/: new_product_form_card.html
project/apps/medcab-backend/src/medcab_backend/templates/components/card/product/: product_card.html
project/apps/medcab-backend/src/medcab_backend/templates/components/datalist/: new_product_form_datalist.html
project/apps/medcab-backend/src/medcab_backend/templates/components/dropdown/: new_product_family_dropdown.html  new_product_form_dropdown.html
project/apps/medcab-backend/src/medcab_backend/templates/components/form/: new_product_form.html
project/apps/medcab-backend/src/medcab_backend/templates/components/form/dropdown/: product_family_dropdown.html  product_form_dropdown.html
project/apps/medcab-backend/src/medcab_backend/templates/components/nav/bottom-navbar/: navbar_bottom.html  navbar_bottom.html.new
project/apps/medcab-backend/src/medcab_backend/templates/components/svgs/: trash_fill.html
project/apps/medcab-backend/src/medcab_backend/templates/pages/: index.html
project/apps/medcab-backend/src/medcab_backend/templates/pages/home/: index.html
project/apps/medcab-backend/src/medcab_backend/templates/pages/products/: index.html
project/apps/medcab-backend/src/medcab_backend/templates/pages/products/new/: index.html
project/apps/medcab-backend/src/medcab_backend/utils/: __init__.py
project/apps/medcab-backend/src/medcab_backend/utils/db_utils/converters/: __init__.py
project/apps/medcab-backend/src/medcab_backend/utils/ui_utils/: __init__.py
project/apps/medcab-backend/src/medcab_backend/utils/ui_utils/menus/: __init__.py  operations.py
project_archive/: .env.example  docker-compose.yml
project_archive/apps/api/: requirements.dev.txt  requirements.txt
project_bak/apps/api/: Dockerfile.dev  requirements.txt
project_flask_bak/: .env.example  docker-compose.yml  reload_nginx.sh
project_flask_bak/apps/medcab-backend-flasak/: Dockerfile  conda-lock.yml
requirements/: requirements.dev.txt  requirements.txt
src/medcab/: cli.py  main.py
src/medcab/core/: __init__.py  config.py  db.py  dependencies.py
(+189 files in other folders)
