[project]
name = "MedCab"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "redjax", email = "none@none.com"},
]
dependencies = [
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "dynaconf>=3.2.4",
    "pandas>=2.1.4",
    "pyarrow>=14.0.2",
    "red-utils>=0.2.15",
    "sqlalchemy>=2.0.25",
    "loguru>=0.7.2",
    "msgpack>=1.0.7",
    "pendulum>=3.0.0",
    "click>=8.1.7",
    "inquirer>=3.2.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.12.1",
    "ruff>=0.1.13",
    "pytest>=7.4.4",
    "pytest-xdist>=3.5.0",
    "nox>=2023.4.22",
]
