
[project]
name = ""
version = ""
description = ""
authors = [{ name = "redjax", email = "none@none.com" }]
dependencies = [
    "dynaconf>=3.2.3",
    "red-utils>=0.2.6",
    "flask>=3.0.0",
    "loguru>=0.7.2",
    "attrs>=23.1.0",
    "sqlalchemy>=2.0.21",
    "pydantic>=2.4.2",
    "Flask-WTF>=1.2.1",
]
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.pdm.dev-dependencies]
dev = ["black>=23.9.1", "ruff>=0.0.292", "pytest>=7.4.2"]

[tool.pdm.scripts]

###############
# Format/Lint #
###############

# Run black & ruff
lint = { shell = "pdm run black . && pdm run ruff check . --fix" }
# Check only, don't fix
check = { cmd = "black ." }
# Check and fix
format = { cmd = "ruff check . --fix" }

########################
# Start/Launch Scripts #
########################

#  Run main app or script. Launches from app/
start = { shell = "cd src && pdm run python start_server.py", env = { ENV_FOR_DYNACONF = "prod" } }
start-dev = { shell = "cd src && pdm run python start_server.py", env = { ENV_FOR_DYNACONF = "dev" } }

######################
# Export Requirement #
######################

#  Export production requirements
export = { cmd = "pdm export --prod -o requirements.txt --without-hashes" }
#  Export only development requirements
export-dev = { cmd = "pdm export -d -o requirements.dev.txt --without-hashes" }
## Uncomment if/when using a CI group
# export-ci = {cmd = "pdm export -G ci -o requirements.ci.txt --without-hashes"}
